--- a/getting-started/onboarding-guide.mdx
+++ b/getting-started/onboarding-guide.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Onboarding Checklist'
+title: 'Onboarding Guide'
 description: 'There are a few key steps for fully activating on Unify'
 ---
 
