--- a/integrations/how-to-integrate-salesforce.mdx
+++ b/integrations/how-to-integrate-salesforce.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'How to Integrate Salesforce'
+sidebarTitle: "Salesforce"
 description: 'This doc outlines how to integrate Unify with your Salesforce instance. Unify is what is considered a `Connected App` on the Salesforce platform.'
 ---
 
